# KorusApp

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .vercelignore  ANCHOR_SETUP_GUIDE.md  BACKEND_FIX_COMPLETE.md  BACKEND_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_CRITICAL_FIXES_LIST.md  CRITICAL_FIXES_PRODUCTION.md  DEPLOY-NOW.md  DEPLOYMENT_STATUS.md  DETAILED_FIX_PLAN.md  Dockerfile  EVENTS-COMPLETE.md  EVENTS-IMPLEMENTATION-STATUS.md  EVENTS-WHITELIST-PLAN.md  FEATURE_IDEAS.md  FINAL_PRODUCTION_AUDIT.md  FIX_BEFORE_APK.md  FIX_ISSUES.md  FRONTEND_CONTRACT_INTEGRATION.md  FULL_INTEGRATION_COMPLETE.md  GAME_TRANSACTION_FIX.md  GAME_TX_FIX_SUMMARY.md  HACKATHON-GUIDE.md  HACKATHON_CALL_TO_ACTION.md  HACKATHON_DEPLOYMENT_CHECKLIST.md  HACKATHON_FIXES_2025-08-01.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  MAINNET_CHANGES_SUMMARY.md  MAINNET_CHECKLIST.md  MAINNET_DEPLOYED.md  MAINNET_DEPLOYMENT.md  MAINNET_READINESS_REVIEW.md  MIGRATION_COMPLETE.md  (+85 more)
__tests__/: App.test.tsx  auth.test.tsx
android/: settings.gradle
app/: +not-found.tsx  _layout.tsx  edit-profile.tsx  index.tsx  moderation.tsx  profile.tsx  search.tsx  settings.tsx  (+2 more)
korus-contracts/programs/korus-game-escrow/: Cargo.toml
korus-contracts/programs/korus-game-escrow/src/: lib.rs  lib_complex.rs
korus-contracts/programs/korus-tipping/: Cargo.toml
korus-contracts/programs/korus-tipping/src/: lib.rs
solana-programs/korus-events/programs/korus-events/: Cargo.toml
solana-programs/korus-events/programs/korus-events/src/: lib.rs
(+581 files in other folders)
