[package]
name = "korus-game-escrow"
version = "0.1.0"
description = "Korus game escrow smart contract for wagering"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "korus_game_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }