[package]
name = "korus-tipping"
version = "0.1.0"
description = "Korus tipping smart contract for content creators"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "korus_tipping"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"