[package]
name = "korus-events"
version = "0.1.0"
description = "Korus Events Smart Contract for ticketing and registration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "korus_events"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"